fixed white space again

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,14 @@
   font-family: "Poppins-Reg";
 }
 
+body {
+  height: 100%;
+  background-color: $backPrimary;
+}
+
 #root {
   height: 100vh;
+  // background-color: $backPrimary;
 }
 
 .app {
